--- a/miniprogram/pages/map/map.wxss
+++ b/miniprogram/pages/map/map.wxss
@@ -21,7 +21,8 @@
   border:none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
-	flex-direction: row;
+  flex-direction: row;
+  font-size: medium;
 }
 
 .imag{
