--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,110 +1,15 @@
 /**index.wxss**/
 
 page {
-  padding-top: 54rpx;
   background-color: #f6f6f6;
-  padding-bottom: 60rpx;
   background:url("https://s3.bmp.ovh/imgs/2021/08/1db656c40e3ab479.jpg");
   background-size:100% 100%;
   -moz-background-size:100% 100%;
   background-repeat: no-repeat;
-}
-
-.title {
-  font-family: PingFang SC;
-  font-weight: 500;
-  color: #000000;
-  font-size: 44rpx;
-  margin-bottom: 40rpx;
-}
-
-.top_tip {
-  font-size: 28rpx;
-  font-family: PingFang SC;
-  font-weight: 400;
-  color: #888888;
-  margin-bottom: 28rpx;
-}
-
-.power {
-  margin-top: 30rpx;
-  border-radius: 5px;
-  background-color: white;
-  width: 93%;
-  padding-bottom: 1rpx;
-}
-
-.power_info {
+  height: 100%;
   display: flex;
-  padding: 30rpx 25rpx;
   align-items: center;
-  justify-content: space-between;
 }
-
-.power_info_more {
-  width: 30rpx;
-  height: 30rpx;
-  transform: rotate(90deg);
-}
-
-.power_info_less {
-  width: 30rpx;
-  height: 30rpx;
-  transform: rotate(270deg);
-}
-
-.power_info_text {
-  display: flex;
-  flex-direction: column;
-}
-
-.power_info_text_title {
-  margin-bottom: 10rpx;
-  font-weight: 400;
-  font-size: 35rpx;
-}
-
-.power_info_text_tip {
-  color: rgba(0, 0, 0, 0.4);
-  font-size: 25rpx;
-}
-
-.power_item {
-  padding: 30rpx 25rpx;
-  display: flex;
-  justify-content: space-between;
-}
-
-.power_item_title {
-  font-size: 30rpx;
-}
-
-.power_item_icon {
-  width: 30rpx;
-  height: 30rpx;
-}
-
-.line {
-  width: 95%;
-  margin: 0 auto;
-  height: 2rpx;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.environment {
-  color: rgba(0, 0, 0, 0.4);
-  font-size: 24rpx;
-  margin-top: 25%;
-}
-
-/* .container{
-  padding: 15rpx;
-  background-color: white;
-	border-radius: 37.5rpx;
-  box-shadow: 5rpx 5rpx 5rpx 5rpx gray;
-  justify-content: space-around;
-  margin: 30rpx;
-} */
 
 .share{
   background-image: url(https://s3.bmp.ovh/imgs/2021/08/7dd5ec675fa6966f.png);
@@ -126,23 +31,23 @@ page {
   display: flex;
  align-items: center;
  justify-content: center;
- /* padding: 1rpx; */
  width: 500rpx;
  height: 100rpx;
  padding:0 20rpx;
  margin: 20rpx;
- background-size: 500rpx 100rpx;
+ background-size: 540rpx 100rpx;
  background-repeat:no-repeat;
  border:none;
 	border-radius: 20rpx;
-  /* box-shadow: 5rpx 5rpx 5rpx 5rpx gray; */
 }
 
 userinfo-avatar{
   display: flex;
  align-items: center;
  justify-content: center;
- 
+ position: relative;
+ right: 0;
+ left: 0;
 }
 
 .start{
@@ -150,12 +55,18 @@ userinfo-avatar{
   width: 400rpx;
   height: 100rpx;
   padding:0 20rpx;
-  position: absolute;
+  position: relative;
   right: 32rpx;
-  top: 0;
-  bottom: 0;
   margin: auto;
   background-size: 400rpx 100rpx;
   background-repeat:no-repeat;
   border:none;
+}
+
+.block{
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: 185%
 }
