--- a/miniprogram/pages/start/index.wxss
+++ b/miniprogram/pages/start/index.wxss
@@ -1,8 +1,8 @@
 /* miniprogram/pages/start/index.wxss */
 page {
-  padding-top: 54rpx;
+  /* padding-top: 54rpx; */
   background-color: #f6f6f6;
-  padding-bottom: 60rpx;
+  /* padding-bottom: 60rpx; */
   background:url("https://s3.bmp.ovh/imgs/2021/08/3c6ce1f55ae171cb.jpg");
   background-size:100% 100%;
   -moz-background-size:100% 100%;
