--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -14,30 +14,30 @@
 </view>
 <van-toast id="van-toast" />
 <view class="bt">
-  <!-- <van-button round  icon="home-o" class="button" bindtap="goBackToHome">回到主页</van-button>
-  <van-button round  icon="completed" class="button" bindtap="showAssociation">记录手账</van-button>
-  <van-button round  icon="flag-o" class="button" bindtap="showPopup">继续探索 </van-button> -->
-  <button class="button" bindtap="goBackToHome">
+  <button class="button" bindtap="goBackToHome" hover-class="plain-hover">
       <image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
     src="https://s3.bmp.ovh/imgs/2021/08/28a78ba8ba454dbf.png"
     class="imag"
     />
   <text class="btText" style="">回到主页</text>
   </button>
-  <button class="button" bindtap="showAssociation">
+  <button class="button" bindtap="showAssociation" hover-class="plain-hover">
   <image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
     src="https://s3.bmp.ovh/imgs/2021/08/8d429fe3aedfd2ca.png"
     class="imag"
     />
   <text class="btText" style="">记录手账</text>
   </button>
-  <button class="button" bindtap="showPopup"><image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
-    src="https://s3.bmp.ovh/imgs/2021/08/8adc41e7c2e9b919.png"
+  <button class="button" bindtap="showPopup" style="" hover-class="plain-hover"><image style="position: relative;width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
+    src="https://s3.bmp.ovh/imgs/2021/08/29dadfe951cff9bf.png"
     class="imag"
     />
-  <text class="btText" style="">继续探索</text> </button>
+  <text class="btText" style="width: 127rpx; height: 69rpx; display: block; box-sizing: border-box; left: 0rpx; top: 0rpx">继续探索</text> </button>
 </view>
-<view class="v" style="position: fixed; left: 346rpx; top: 593rpx; width: 60rpx; height: 35rpx; display: block; box-sizing: border-box;opacity:0">信封</view>
+<view class="v" style="position: fixed; left: 279rpx; top: 531rpx; width: 50rpx; height: 50rpx; display: block; box-sizing: border-box; opacity: 0">
+      <image src="https://s3.bmp.ovh/imgs/2021/08/bbc24fcf78407ecd.png" style="height: 50rpx; width: 50rpx; display: inline-block; box-sizing: border-box; left: -35rpx; top: -178rpx; position: relative" dis></image>
+
+</view>
 <van-popup show="{{ show }}" bind:close="onClose" custom-style="height: 40%" position="bottom" round>
 
       <view wx:if="{{next_items_list.length > 0}}"> 
