--- a/miniprogram/pages/map/map.wxss
+++ b/miniprogram/pages/map/map.wxss
@@ -3,37 +3,38 @@
   position:fixed;
   /* bottom:0;
   left:10px */
-  /* padding: 5rpx; */
+  padding: 5rpx;
+  margin: 5rpx;
 }
 .button{
-  /* vertical-align:middle; */
-  background-image: url(https://s3.bmp.ovh/imgs/2021/08/7dd5ec675fa6966f.png);
-  width: 300rpx;
-  height: 100rpx;
-  padding:0 20rpx;
-  /* position: absolute; */
-  /* right: 32rpx;
-  top: 0;
-  bottom: 0; */
-  margin: 10rpx;
-  background-size: 300rpx 100rpx;
-  background-repeat:no-repeat;
+  width: 160rpx;
+  height: 160rpx;
+  padding:0 10rpx;
+  margin: 15rpx;
+  /* background-size: 300rpx 100rpx; */
+  /* background-repeat:no-repeat; */
   border:none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   font-size: medium;
+  /* display: flex; */
+  align-items: center;
+  box-shadow: 5rpx 5rpx 5rpx 5rpx gray;
+  background-color: white;
 }
 
 .imag{
 position: relative;
-padding: 10rpx;
+padding: 5rpx;
+width: 90rpx;
+ height: 90rpx;
 }
 .btText{
   position: relative;
-  font-size: larger;
+  font-size: medium;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  /* margin: 15rpx; */
+  /* margin: 10rpx; */
   /* padding: 10rpx; */
 }
 
@@ -115,3 +116,9 @@ padding: 10rpx;
   background-repeat:no-repeat;
   border:none;
  }
+
+ .plain-hover{
+  position: relative;
+  top: 3rpx;
+  box-shadow:0px 0px 10px #bbbec4 inset; 
+}
