--- a/miniprogram/pages/end/index.wxml
+++ b/miniprogram/pages/end/index.wxml
@@ -11,4 +11,5 @@
   <text class="p" id="p8">却是他们曲折的一生。</text>
   <text class="p" id="p9">那个黑暗年代，他们即使不知后事如何，</text>
   <text class="p" id="p10">也义无反顾地奔向信仰的方向。</text>
+  <text class="p" id="p11">——完——</text>
 </view>
