--- a/miniprogram/components/personAchieveCard/personAchieveCard.wxml
+++ b/miniprogram/components/personAchieveCard/personAchieveCard.wxml
@@ -1,5 +1,5 @@
 <!--components/personAchieveCard/personAchieveCard.wxml-->
-<navigator url="/pages/personInfo/index?char_id={{char_id}}" bindtap="">
+<navigator bindtap="tap">
   <view class="card">
     <image class="image" src="{{imageUrl}}"/>
     <text class="name"   style="position: relative; left: 0rpx">{{name}}</text>
