--- a/miniprogram/pages/charMap/index.wxml
+++ b/miniprogram/pages/charMap/index.wxml
@@ -1,5 +1,10 @@
 <!--miniprogram/pages/charMap/index.wxml-->
+<van-notice-bar
+  left-icon="volume-o"
+  text="根据下图的人物关系图进行探索来解锁成就吧~~"
+/>
 <image style="width: 743rpx; height: 1323rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx" 
   src="https://s3.bmp.ovh/imgs/2021/08/0df488307230dc7b.png"
 />
 <van-toast id="van-toast" />
+
