--- a/miniprogram/pages/personInfo/index.wxss
+++ b/miniprogram/pages/personInfo/index.wxss
@@ -115,11 +115,28 @@ page {
   font-weight: normal;
 }
 
-.button {
-  background-image: url(https://s3.bmp.ovh/imgs/2021/08/7dd5ec675fa6966f.png);
-  background-size: 400rpx 100rpx;
-  width: 400rpx;
-  height: 100rpx;
+.jump {
+  width: 160rpx;
+  height: 160rpx;
+  position: fixed;
+  margin-top: 10rpx;
+  margin-right: 20rpx;
+  margin-left: 75%;
+  box-shadow: 5rpx 5rpx 5rpx 5rpx gray;
+  align-items: center;
   text-align: center;
-  vertical-align: middle;
+  box-sizing: border-box;
+}
+.icon{
+  position: relative;
+  margin-top: 10rpx;
+  margin-left: 10rpx;
+  width: 90rpx;
+  height: 90rpx;
+  display: block;
+}
+.btn_text{
+  position: relative;
+  font-size: x-small;
+  text-align: center;
 }
