--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -28,11 +28,19 @@
     />
   <text class="btText" style="">记录手账</text>
   </button>
-  <button class="button" bindtap="showPopup" style="" hover-class="plain-hover"><image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
+
+  <button class="button" bindtap="showPopup" hover-class="plain-hover">
+  <image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
     src="https://s3.bmp.ovh/imgs/2021/08/29dadfe951cff9bf.png"
     class="imag"
     />
-  <text class="btText" style="width: 127rpx; height: 69rpx; display: block; box-sizing: border-box; left: 0rpx; top: 0rpx">继续探索</text> </button>
+  <text class="btText" style="">继续探索</text>
+  </button>
+
+  <!-- <button class="button" bindtap="showPopup" style="" hover-class="plain-hover"><image style="width: 90rpx; height: 90rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"  
+    src="https://s3.bmp.ovh/imgs/2021/08/29dadfe951cff9bf.png"
+    class="imag"/>
+  <text class="btText" style="width: 127rpx; height: 69rpx; display: block; box-sizing: border-box; left: 0rpx; top: 0rpx">继续探索</text> </button> -->
 </view>
 <view class="v" style="position: fixed; left: 279rpx; top: 531rpx; width: 50rpx; height: 50rpx; display: block; box-sizing: border-box; opacity: 0">
       <image src="https://s3.bmp.ovh/imgs/2021/08/bbc24fcf78407ecd.png" style="height: 50rpx; width: 50rpx; display: inline-block; box-sizing: border-box; left: -35rpx; top: -178rpx; position: relative" dis></image>
@@ -58,8 +66,8 @@
       </view>
       <view wx:else> 
             <view class="popup">
-                  <view class="title">
-                        <text class='text_title'>成功点亮本条故事线所有人物！</text>
+                  <view class="title2">
+                        <text class='text_title2'>成功点亮本条故事线所有人物！</text>
                   </view>
             <button class="back_button" bindtap="goToChooseCoreChar">回到核心人物选择界面</button>
             </view>
