--- a/miniprogram/pages/personInfo/index.wxml
+++ b/miniprogram/pages/personInfo/index.wxml
@@ -1,5 +1,5 @@
 <!--miniprogram/pages/personInfo/index.wxml-->
-<view wx:if="{{!char_id}}">请探索该人物后再试</view>
+<!-- <view wx:if="{{!char_id}}">请探索该人物后再试</view> -->
 <button wx:if="{{place_id}}" class="jump"  bindtap="jumpToPersonPlace" >
     <image wx:if="{{place_id}}"
       src="https://box.nju.edu.cn/f/0adfa749a2a04a108496/?dl=1"
@@ -7,7 +7,7 @@
     />
     <text class="btn_text">相关地点</text>
 </button>
-<view wx:if="{{char_id}}" class="personInfo">
+<!-- <view wx:if="{{char_id}}" class="personInfo"> -->
   <view class="person-info-title">{{record.cname}}</view>
   <image class="person-info-img" src="{{record.image_url}}"></image>
   <view class="person-info-content">
@@ -21,23 +21,23 @@
     <text>\n</text><text>\n</text>
     </view>
   </view>
-  <image src="https://box.nju.edu.cn/f/ccabdb67911b4c39a6e9/?dl=1" class="before-person-story"></image>
+  <image src="https://box.nju.edu.cn/f/ccabdb67911b4c39a6e9/?dl=1" class="before-person-story" style="width: 300rpx; height: 160rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"></image>
   <view class="person-info-story">
   <view class="real-content">
     {{record.story}}
   </view>
   </view>
-  <image class="before-submit-comment" src="https://box.nju.edu.cn/f/e2642ad913ee430d8c43/?dl=1"></image>
+  <image class="before-submit-comment" src="https://box.nju.edu.cn/f/e2642ad913ee430d8c43/?dl=1" style="width: 300rpx; height: 200rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx"></image>
   <view class="submit-comment">
-    <input bindinput="input_comment" class="input-comment" type="text" value="{{input_comment}}" placeholder="请输入你的评论"></input>
+    <input bindinput="input_comment" class="input-comment" type="text" value="{{input_comment}}" placeholder="留下你想对这位人物说的话吧~"></input>
     <button class="submit-btn" bindtap="submit">提交</button>
   </view>
   <view class="all-comment">
     <view class='comment'  wx:for="{{comment}}" wx:key="_id">
       <view class="real-content">
-        <view class="comment_detail_user_name">{{item.user_name}} 说：</view>
+        <view class="comment_detail_user_name">@{{item.user_name}}</view>
         <view class="comment_detail_comment">{{item.comment}}</view>
       </view>
     </view>
   </view>
-</view>
+<!-- </view> -->
